Tue Oct 10 14:24:12 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

	* DAnCE/ExecutionManager/Execution_Manager_Impl.cpp:
	  Layout improvements, use ACE_ERROR with LM_ERROR

	* DAnCE/ExecutionManager/DAM_Map.cpp:
	  Const improvements

	* DAnCE/NodeApplicationManager/Containers_Info_Map.h:
	  Layout changes

	* DAnCE/NodeApplicationManager/Containers_Info_Map.cpp:
	* DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.cpp:
	  Use ACE_ERROR with LM_ERROR

	* DAnCE/NodeApplicationManager/ImplementationInfo.h:
	  Documentation improvements

	* DAnCE/NodeApplicationManager/ImplementationInfo.cpp:
	  Const improvements

	* DAnCE/NodeApplicationManager/HTTP_Handler.cpp:
	  Const improvements

Tue Oct 10 09:28:12 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

	* ciao/CCM_Base.idl:
	  Removed a remark about RTF 1.1, method is now according to the spec

	* ciao/CCM_Component.idl:
	* ciao/CCM_Container.idl:
	* ciao/CCM_Event.idl:
	* ciao/Deployment.idl:
	* ciao/Target_Data.idl
	  Updated some documentation and added some todos about things which
	  are CIAO specific

	* ciao/Server_init.cpp:
	  With LM_ERROR use ACE_ERROR

	* ciao/Dynamic_Component_Activator.{h,cpp}:
	  Removed some invalid comments and a mutex that was not used at all

	* ciao/Context_Impl_Base.h:
	  Documentation update

Thu Oct 05 00:35:37 2006  William R. Otte  wotte@dre.vanderbilt.edu

        * CIAO version 0.5.3 released.

Wed Oct  4 08:12:24 UTC 2006  Boris Kolpackov  <boris@codesynthesis.com>

        * NEWS:

          Updated with entries for the CIDL compiler work.

Tue Oct  3 15:16:40 UTC 2006  Shanshan Jiang <shanshan.jiang@vanderbilt.edu>

        * NEWS:

          Updated the NEWS to add the changes for Repoman and Plan_Generator
          projects.

Tue Oct  3 12:49:16 UTC 2006  xiong,ming  <ming.xiong@vanderbilt.edu>

        * NEWS:

          Updated the NEWS to add the changes for CoSMIC Quoter tutorial

Mon Oct  2 09:28:58 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
